--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -81,7 +81,7 @@ function markerEvent(i) {
 </script> 
 <div class='map-container'>
   <div id="sample"></div>
-  <div class="overflow-auto" style="width:400px; height:800px;">
+  <div class="overflow-auto" style="width:30%; height:800px;">
     <% @shop.each do |shop| %>
       <div class='scroll'>
         <%= image_tag "/#{shop.shop_image}" %>
