--- a/app/views/map/_posts.html.erb
+++ b/app/views/map/_posts.html.erb
@@ -1,6 +1,9 @@
 
     <% @posts.each do |post| %> 
        <div class="card " style="width: 100%;" >
+         <div class="user-infomation">
+            <%=post.user.name %>
+         </div>
          <div class="card-body ">
             <h5 class="card-title "><%=post.title %></h5>
             <p class="card-text "><%= simple_format post.body %></p>
