--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           <a class="nav-item nav-link active" href="/map/index">らーめんマップへ <span class="sr-only"></span></a>
           <% if user_signed_in? %>
             <a class="nav-item nav-link" href="/users/edit">プロフィール変更</a>
-            <a class="nav-item nav-link" data-method="delete"　href="/users">ログアウト</a>
+            <a class="nav-item nav-link" href="/users/sign_out" data-method="delete"　>ログアウト</a>
           <% else %>
             <a class="nav-item nav-link " href="/users/sign_up">サインイン</a>
             <a class="nav-item nav-link " href="/users/sign_in">ログイン</a>
