--- a/app/views/map/show.html.erb
+++ b/app/views/map/show.html.erb
@@ -73,6 +73,7 @@
               <%= f.text_area :body, class: "form-control" %>
             </div>
           </div>
+          <%= f.hidden_field :shop_id, value:@shop.id %>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <%= f.submit "投稿する", class: "btn btn-primary" %>
