--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="/map/index">らーめんマップへ <span class="sr-only"></span></a>
           <% if user_signed_in? %>
-            <a class="nav-item nav-link" href="/users/edit">プロフィール変更</a>
-            <a class="nav-item nav-link" href="/users/sign_out" data-method="delete"　>ログアウト</a>
+            <%= link_to "マイページ", user_path(current_user), class: "nav-item nav-link " %>
+            <%= link_to 'ログアウト', "/users/sign_out", method: :delete, class: "nav-item nav-link " %>
           <% else %>
             <a class="nav-item nav-link " href="/users/sign_up">サインイン</a>
             <a class="nav-item nav-link " href="/users/sign_in">ログイン</a>
