--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -1,3 +1,13 @@
+@media screen and (min-width: 1200px)  {
+    .home-index-item {
+        
+        margin-left: 350px;
+        
+       
+    
+    }
+    
+}
 @media screen and (min-width: 768px) and (max-width: 1024px) {
    
     
