--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,4 +1,4 @@
-<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_PSBxnfWMZrgsTtn5mY9csi4Qw24o5ic&callback=initMap"></script> 
+<script async src="https://maps.googleapis.com/maps/api/js?key=<% ENV['API_KEY'] %>&callback=initMap"></script> 
 <script> 
 var map;
 var marker = [];
