--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MapApp2</title>
+    <meta charset="utf-8">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <title>源選！愛知県のらーめんマップ!</title>
+    <meta name="description" content="愛知県のらーめんがマップでわかる！会員登録をして、クチコミをかこう！">
   </head>
-
   <body>
     <%= render 'layouts/flashes' %>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
