--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,7 +2,7 @@
   <article class="media">
     <div class="media-content">
         <p>
-          <strong class="is-size-1" style="font-family: cursive;">らーめんマップ</strong>
+          <strong class="is-size-1" style="font-family: cursive;"><%=link_to 'らーめんマップ', map_index_path %></strong>
         </p>
       </div>
       <div class="columns is-centered">
