--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -5,18 +5,27 @@
 var map;
 var marker = [];
 var infoWindow = [];
-<% @shops.each do |shop| %>
+var markerData = [ // マーカーを立てる場所名・緯度・経度
+       <% @shops.each do |shop| %>
+       {
+           name: '<%= shop.name %>',
+           lat: <%= shop.lat %>,
+           lng: <%= shop.lng %>,
+           url: "/map/<%= shop.id %>"
+       },
+       <% end %>
+   ];
   function initMap() {
   // 地図の作成
-      var mapLatLng = new google.maps.LatLng({lat: <%=shop.lat %>, lng: <%=shop.lng %>}); // 緯度経度のデータ作成
+      var mapLatLng = new google.maps.LatLng({lat: markerData[0]['lat'], lng: markerData[0]['lng']});
     map = new google.maps.Map(document.getElementById('sample'), { // #sampleに地図を埋め込む
       center: mapLatLng, // 地図の中心を指定
         zoom: 12// 地図のズームを指定
     });
   
   // マーカー毎の処理
-  for (var i = 0; i < shop.length; i++) {
-          markerLatLng = new google.maps.LatLng({lat: <%=shop.lat %>, lng: <%=shop.lng %>}); // 緯度経度のデータ作成
+  for (var i = 0; i < markerData.length; i++) {
+          markerLatLng = new google.maps.LatLng({lat: markerData[i]['lat'], lng: markerData[i]['lng']}); // 緯度経度のデータ作成
           marker[i] = new google.maps.Marker({ // マーカーの追加
           position: markerLatLng, // マーカーを立てる位置を指定
               map: map ,// マーカーを立てる地図を指定
@@ -25,8 +34,7 @@ var infoWindow = [];
 
   
       infoWindow[i] = new google.maps.InfoWindow({ // 吹き出しの追加
-          content:   '<%=link_to '#{shop.name}', map_path(shop) %>'
-                  
+          content:  `<a href=${markerData[i].url}>${markerData[i].name}</a>`
 
             // 吹き出しに表示する内容
         });
@@ -38,7 +46,6 @@ var infoWindow = [];
   
     
   }
-<% end %> 
 // マーカーにクリックイベントを追加
 function markerEvent(i) {
     marker[i].addListener('click', function() { // マーカーをクリックしたとき
@@ -52,11 +59,10 @@ function markerEvent(i) {
   <div class="overflow-auto" style="width:30%; height:800px;">
     <% @shops.each do |shop| %>
       <div class='scroll'>
-        <%= image_tag "/#{shop.shop_image}" %>
+        <%= attachment_image_tag shop, :shop_image %>
         <%= link_to map_path(shop) do %>
            <%=simple_format shop.name %>
         <% end %>
-        <a href="<%=shop.url %>">食べログ店舗画面</a>
       </div>
     <% end %>
   </div>
