--- a/app/views/map/show.html.erb
+++ b/app/views/map/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container" >
       <div class="posts-index-image">
-         <%= image_tag "/#{@shop.shop_image}" %>
+         <%= attachment_image_tag @shop, :shop_image %>
       </div>
       <div class="card">
         <div class="card-body">
@@ -64,7 +64,7 @@
           <div class="modal-body">
             <div class="form-group">
               <%= f.label :title, "タイトル" %>
-               <%= f.text_field :title, class: "form-control" %>
+              <%= f.text_field :title, class: "form-control" %>
             </div>
              <div class="form-group">
               <%= f.label :body, "クチコミ" %>
