--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -9,8 +9,8 @@ var markerData = [ // マーカーを立てる場所名・緯度・経度
        <% @shops.each do |shop| %>
        {
            name: '<%= shop.name %>',
-           lat: <%= shop.lat %>,
-           lng: <%= shop.lng %>,
+           lat: <%= shop.latitude %>,
+           lng: <%= shop.longitude %>,
            url: "/map/<%= shop.id %>"
        },
        <% end %>
